--- a/PulsePointFeed.css
+++ b/PulsePointFeed.css
@@ -29,8 +29,9 @@ a {
 div.Call {
   padding-left:   0.5em;
   padding-right:  0.5em;
-  padding-top:    0.7em;
-  padding-bottom: 0.8em;
+  padding-top:    0.6em;
+  padding-bottom: 0.7em;
+  margin-bottom:  0.5em;
 }
 
 div.Call div:first-child {
