--- a/PulsePointFeed.css
+++ b/PulsePointFeed.css
@@ -1,7 +1,8 @@
 
 html, body {
   overflow: auto;
-  font: normal 12px tahoma, arial, verdana, sans-serif;
+  font-style: normal;
+  font-family: tahoma, arial, verdana, sans-serif;
   font-size: 100%;
   margin-left: 0.5em;
   padding: 0;
