--- a/PulsePointFeed.css
+++ b/PulsePointFeed.css
@@ -40,16 +40,13 @@ div.Call {
   display: flex;
   flex-wrap: wrap;
 }
-.LeftLeft div:first-child {
+.LeftLeft div:first-child,
+.LeftRight div:first-child {
   clear: both;
   float: left;
 }
 .LeftLeft div:nth-child(2) {
   overflow: hidden;
-}
-.LeftRight div:first-child {
-  clear: both;
-  float: left;
 }
 .LeftRight div:nth-child(2) {
   overflow: hidden;
