--- a/PulsePointFeed.css
+++ b/PulsePointFeed.css
@@ -22,10 +22,13 @@ a {
   color: inherit;
 }
 
-.resetFloat {
-  clear: both;
+.RefreshButton {
+  vertical-align: middle;
+  padding-bottom: 0.1em;
+  padding-left: 0.1em;
+  width: 1.2em;
+  height: 1.2em;
 }
-
 
 div.Call {
   padding-left:   0.5em;
@@ -33,6 +36,33 @@ div.Call {
   padding-top:    0.6em;
   padding-bottom: 0.7em;
   margin-bottom:  0.5em;
+}
+
+div.Deemphasize {
+  color: #707070;
+  font-size: 96%;
+  padding-top: 0.05em;
+  vertical-align: baseline;
+}
+
+div.Units {
+  padding-top: 0.3em;
+  padding-bottom: 0.3em;
+}
+
+.CurrCall {
+  background-color: #DDFF99;
+  -moz-border-radius: 0.6em;
+  -webkit-border-radius: 0.6em;
+}
+
+.CurrUnit {
+  //background-color: #DDDDFF;
+  color: red;
+  -moz-border-radius: 0.4em;
+  -webkit-border-radius: 0.4em;
+  padding-left: 0.1em;
+  padding-right: 0.1em;
 }
 
 
@@ -58,33 +88,8 @@ div.Call {
 }
 
 
-div.Deemphasize {
-  color: #707070;
-  font-size: 96%;
-  margin-top: 0.04em;
-  vertical-align: baseline;
-}
-
-div.Units {
-  padding-top: 0.3em;
-  padding-bottom: 0.3em;
-}
 
 
-.CurrCall {
-  background-color: #DDFF99;
-  -moz-border-radius: 0.6em;
-  -webkit-border-radius: 0.6em;
-}
-
-.CurrUnit {
-  //background-color: #DDDDFF;
-  color: red;
-  -moz-border-radius: 0.4em;
-  -webkit-border-radius: 0.4em;
-  padding-left: 0.1em;
-  padding-right: 0.1em;
-}
 
 
 
@@ -167,15 +172,6 @@ table.Calls tr.Past a {
 
 
 
-div.Left {
-  clear: both;
-  float: left;
-}
-div.Right {
-  overflow: hidden;
-  text-align: right;
-}
-
 
 .Station {
   margin-top: 1.5em;
@@ -186,15 +182,6 @@ div.Right {
 }
 
 
-a.DateChangeButton,
-a.RefreshButton {
-  text-decoration: none;
-  font-style: normal;
-  font-size: 120%;
-  vertical-align: baseline;
-  color: inherit;
-  padding-left: 0.1em;
-}
 
 
 table.StationTable td:first-child {
