--- a/PulsePointFeed/PulsePointFeed.css
+++ b/PulsePointFeed/PulsePointFeed.css
@@ -3,7 +3,7 @@ html, body {
   overflow: auto;
   font-style: normal;
   font-family: tahoma, arial, verdana, sans-serif;
-  //font-size: 100%;
+  font-size: 104%;
   margin-left: 0.5em;
   padding: 0;
   border: 0 none;
@@ -34,12 +34,13 @@ a {
   vertical-align: middle;
   padding-right: 0.1em;
   //padding-bottom: 0.1em;
-  width: 1.6em;
-  height: 1.6em;
+  width: 1.9em;
+  height: 1.9em;
 }
 
 .RelTime {
-  //padding-top: 0.1em;
+  padding-top: 0.2em;
+  font-size: 98%;
 }
 
 
@@ -49,9 +50,9 @@ hr.Spacer {
 }
 
 div.Call {
-  padding-left:   0.5em;
-  padding-right:  0.5em;
-  padding-top:    0.6em;
+  padding-left:   0.3em;
+  padding-right:  0.3em;
+  padding-top:    0.4em;
   padding-bottom: 0.7em;
   //margin-bottom:  1em;
 }
