--- a/PulsePointFeed/PulsePointFeed.css
+++ b/PulsePointFeed/PulsePointFeed.css
@@ -40,6 +40,7 @@ a {
   vertical-align: middle;
   padding-bottom: 0.1em;
   padding-left: 0.1em;
+  padding-right: 0.1em;
   width: 1.6em;
   height: 1.6em;
 }
@@ -82,6 +83,7 @@ hr.Spacer {
 
 #UnitInput {
   background-color: #DDDDDD;
+  margin-bottom: 0.4em;
 }
 
 div.Call {
