--- a/PulsePointFeed/PulsePointFeed.css
+++ b/PulsePointFeed/PulsePointFeed.css
@@ -39,7 +39,7 @@ a {
 
 .MapCallButton {
   vertical-align: middle;
-  padding-left: 0.9em;
+  margin-left: 0.9em;
   padding-bottom: 0.1em;
   width: 2em;
   height: 2em;
