--- a/PulsePointFeed/PulsePointFeed.css
+++ b/PulsePointFeed/PulsePointFeed.css
@@ -22,31 +22,29 @@ a {
 }
 
 .ModalDialog {
-  /* arbitrary styling */
   background-color: white;
-  border-radius: 5px;
   border: 1px solid gray;
+  border-radius: 5px;
   box-shadow: 0.3em 0.3em 0.3em rgba(0,0,0,0.2);
   height: 1.5em;
-  
+  margin-top: 8em;
+  padding: 0.3em 1.2em;
 
   /* change position to fixed if you want to prevent the dialog from scrolling away, and center it */
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  
-  //margin-left: auto;
-  //margin-right: auto;
-  margin-left: -5.5em;
-  margin-top: -12em;
-}
-.ModalDialog::backdrop {
   //position: fixed;
-  //top: 0;
-  //left: 0;
-  //right: 0;
-  //bottom: 0;
+}
+
+.ModalOverlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 100;
   background-color: rgba(0,0,0,0.3);
+  display: flex;
+  align-items: flex-start;
+  justify-content: center;
 }
 
 .LastRefreshed {
