--- a/PulsePointFeed/PulsePointFeed.css
+++ b/PulsePointFeed/PulsePointFeed.css
@@ -39,6 +39,8 @@ a {
 
 .ModalOverlay {
   touch-action: none;
+  -webkit-overflow-scrolling: touch;
+  overflow: scroll;
   display: none;
   position: fixed;
   top: 0;
